--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "rxjs": "^6.4.0",
     "vue": "^2.5.22"
   },
   "devDependencies": {
